Add explicit hot cache eviction
